--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -3,7 +3,6 @@
 }
 
 .main-login-button {
-  text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
 }
